Corrige impressão da etiqueta após cadastro de visita
